# RustGameEngine

./: .gitignore  Cargo.toml  README.md  build.rs  new.eproj
crates/app/: Cargo.toml
crates/app/src/: AppHandler.rs  app.rs  app_handler.rs  engine.rs  lib.rs
crates/asset_pipeline/: Cargo.toml
crates/asset_pipeline/src/: codegen.rs  emat.rs  lib.rs  mesh_conditioner.rs  shader.rs  shader_conditioner.rs  texture_conditioner.rs
crates/assets/: Cargo.toml
crates/assets/src/: asset_manager.rs  asset_store.rs  emesh.rs  etex.rs  lib.rs  spv.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: guid.rs  handle.rs  image_data.rs  lib.rs  mesh.rs  shader_data.rs  typed_store.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/core/: Cargo.toml
crates/core/src/: asset_context.rs  engine_context.rs  lib.rs  system.rs
crates/core/src/components/: mod.rs
crates/core/src/components/SpectatorCamera/: mod.rs
crates/core/src/systems/: mod.rs
crates/core/src/types/: ResolvedHandle.rs  mod.rs  resolution.rs  transform.rs
crates/ecs/: Cargo.toml
crates/ecs/macros/: Cargo.toml
crates/ecs/macros/src/: lib.rs
crates/ecs/src/: lib.rs
crates/ecs/src/command_buffer/: mod.rs
crates/ecs/src/component/: archetype.rs  component_storage.rs  impls.rs  mod.rs  query.rs
crates/ecs/src/entity/: mod.rs
crates/ecs/src/entity_storage/: mod.rs
crates/ecs/src/query/: impls.rs  mod.rs
crates/ecs/src/systems/: mod.rs
crates/ecs/src/world/: mod.rs
crates/game_object/: Cargo.toml
crates/game_object/src/: lib.rs  traits.rs
crates/game_object/src/primitives/: camera.rs  mod.rs  static_mesh.rs  types.rs
crates/imgui/: Cargo.toml
crates/imgui/src/: lib.rs
crates/input/src/: axis_action.rs  config.rs  device.rs  input_action.rs  lib.rs  manager.rs
crates/legacy_macros/: Cargo.toml
crates/legacy_macros/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/material/: Cargo.toml
crates/material/src/: lib.rs  macros.rs  material.rs  material_manager.rs
crates/project/: Cargo.toml
crates/project/src/: lib.rs  meta.rs  project.rs  registry.rs
crates/renderer/: Cargo.toml
crates/renderer/shaders/: compile.bat  line_debug_vert.spv  pbr.frag.HAS_COLOR_TEXTURE.HAS_NORMAL_TEXTURE.spv  pbr.frag.HAS_COLOR_TEXTURE.spv  pbr.frag.normal.spv  pbr.frag.orm.color.spv  pbr.frag.orm.normal.color.spv  pbr.frag.orm.normal.spv  pbr.frag.orm.spv  pbr.frag.spv  shader.frag  shadow.spv
crates/renderer/src/: frame_data.rs  lib.rs  material_gpu_cache.rs  render_data.rs  render_scene.rs  renderer.rs  shader_loader.rs
crates/renderer/src/passes/: aabb_debug_renderer.rs  geometry_renderer.rs  lighting_renderer.rs  mod.rs
crates/renderers/render_utils/: Cargo.toml
crates/renderers/render_utils/src/: camera.rs  lib.rs  render_structs.rs
crates/renderers/render_utils/src/renderers/: geometry_renderer.rs  lighting_renderer.rs
crates/rendering_backend/: Cargo.toml
crates/rendering_backend/src/: buffer.rs  camera.rs  descriptor.rs  image.rs  lib.rs  memory.rs  pipeline.rs  sampler.rs  transform.rs  vertex.rs
crates/rendering_backend/src/backend_impl/: Handles.rs  allocated_buffer.rs  camera.rs  constants.rs  conversions.rs  descriptor_info.rs  destroyable.rs  device.rs  frame_manager.rs  image_util.rs  mod.rs  pipeline_info.rs  renderer.rs  resource_manager.rs  resource_registry.rs  scene.rs  structs.rs  swapchain.rs  utils.rs  vk_vertex_info.rs  vulkan_backend.rs
crates/scene/: Cargo.toml
crates/scene/src/: components.rs  lib.rs  registration.rs  resolved_handle.rs  scene.rs
crates/spatial/: Cargo.toml
crates/spatial/src/: lib.rs
crates/spatial/src/dynamic_aabb/: collider.rs  mod.rs  shape.rs
crates/vulkan_backend/: Cargo.toml
crates/vulkan_backend/src/: descriptor.rs  graphics_pipeline.rs  image_util.rs  lib.rs  mod.rs  structs.rs  surface.rs  swapchain.rs  utils.rs  vulkan_backend.rs
crates/vulkan_backend/src/render_objects/: draw_objects.rs  mod.rs  render_batch.rs
resources/shaders/: compile.bat  frag.spv  lighting.frag  lighting.spv  line_debug.vert  pbr.frag.base.spv  pbr.frag.color.spv  pbr.frag.normal.color.spv  pbr.frag.normal.spv  pbr.frag.orm.color.spv  pbr.frag.orm.normal.color.spv  pbr.frag.orm.normal.spv  pbr.frag.orm.spv  quad.spv  quad.vert  shader.frag  shader.vert  shadow.spv  shadow.vert  vert.spv
sample/: Cargo.toml  build.rs  sample.eproj
sample/resources/materials/: brick.emat  scroll.emat
sample/resources/shaders/: scroll.frag
sample/src/: main.rs
src/: lib.rs  main.rs  structs.rs  utils.rs
src/assets/: asset_manager.rs
src/command_pool/: command_pool.rs
src/engine_components/: app.rs  engine_components.rs  material.rs  mod.rs  scene.rs  system.rs
src/frame_buffer/: frame_buffer.rs
src/graphics_pipeline/: graphics_pipeline.rs
src/render_pass/: render_pass.rs
src/shaders/: compile.bat  shader.frag  shader.vert  vert.spv
src/swapchain/: structs.rs
src/terrain/: constants.rs  generator.rs  mod.rs  octree.rs  terrain.rs  terrain_material.rs
src/terrain/blocks/: block_definitions.rs  blocks.rs  mod.rs
src/validation/: validation.rs
src/vulkan_render/: buffer.rs  camera.rs  command_buffer.rs  constants.rs  descriptor.rs  descriptors.rs  device.rs  frame_buffer.rs  frame_manager.rs  graphics_pipeline.rs  image_util.rs  mod.rs  renderable.rs  scene.rs  shader.rs  structs.rs  surface.rs  swapchain.rs  utils.rs  validation.rs  vertex_buffer.rs  vulkan_backend.rs
src/vulkan_render/material/: material.rs
src/vulkan_render/render_objects/: draw_objects.rs  render_batch.rs
src/vulkan_render/renderpass/: gbuffer_pass.rs  mod.rs  render_pass.rs
tools/publish/: Cargo.toml
tools/publish/src/: main.rs
vulkan_backend/src/: buffer.rs  constants.rs  descriptor.rs  frame_manager.rs  graphics_pipeline.rs  scene.rs  structs.rs  swapchain.rs  utils.rs
vulkan_backend/src/material/: material.rs
vulkan_backend/src/render_objects/: draw_objects.rs  render_batch.rs
