[package]
name = "new"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.3"
serde = { version = "1.0.204", features = ["derive"] }
typed-arena = "2.0.2"
image = { workspace = true }
nalgebra = { workspace = true }
nalgebra-glm = { workspace = true }
vulkan_backend = { path = "crates/vulkan_backend" }
app = { path = "crates/app" }
scene = { path = "crates/scene" }
assets = { path = "crates/assets" }

noise = "0.9.0"

[build-dependencies]
walkdir = "2.5.0"

[workspace]
members = [
    "crates/app", "crates/assets", "crates/macros", "crates/scene",
    "crates/vulkan_backend",
]

[workspace.dependencies]
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"
bincode = "1.3.3"
image = "0.25.5"
num = "0.4.3"



