[package]
name = "new"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.9"
serde = { version = "1.0.204", features = ["derive"] }
typed-arena = "2.0.2"
image = { workspace = true }
nalgebra = { workspace = true }
nalgebra-glm = { workspace = true }
rendering_backend = { path = "crates/rendering_backend" }
app = { path = "crates/app" }
scene = { path = "crates/scene" }
assets = { path = "crates/assets" }
game_object = { path = "crates/game_object" }
material = { path = "crates/material" }
core = { path = "crates/core" }
ecs = { path = "crates/ecs" }

noise = "0.9.0"

[build-dependencies]
walkdir = "2.5.0"

[workspace]
members = [
    "crates/app", "crates/assets", "crates/common", "crates/core", "crates/ecs", "crates/game_object", "crates/imgui", "crates/macros", "crates/material", "crates/renderer", "crates/rendering_backend", "crates/scene",
]

[workspace.dependencies]
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
nalgebra-glm = "0.20.0"
image = "0.25.5"
num = "0.4.3"



