[package]
name = "sample"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev"]
dev = ["core/dev"]  # propagates down the chain

[dependencies]
winit = "0.30.9"
serde = { version = "1.0.204", features = ["derive"] }
image = { workspace = true }
nalgebra = { workspace = true }
nalgebra-glm = { workspace = true }
rendering_backend = { path = "../crates/rendering_backend" }
app = { path = "../crates/app" }
assets = { path = "../crates/assets" }
material = { path = "../crates/material" }
core = { path = "../crates/core" }
ecs = { path = "../crates/ecs" }
input = { path = "../crates/input" }
spatial = { path = "../crates/spatial" }
project = { path = "../crates/project" }
asset_pipeline = { path = "../crates/asset_pipeline" }
noise = "0.9.0"
rand = "0.9"
common = { path = "../crates/common" }

[build-dependencies]
asset_pipeline = { path = "../crates/asset_pipeline" }
