[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
assets = { path = "../assets" }
scene = { path = "../scene" }
core = { path = "../core" }
rendering_backend = { path = "../rendering_backend" }
material = { path = "../material" }
renderer = { path = "../renderer" }
game_object = {path = "../game_object"}

winit = "0.30.9"