[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
assets = { path = "../assets" }
core = { path = "../core" }
rendering_backend = { path = "../rendering_backend" }
material = { path = "../material" }
renderer = { path = "../renderer" }
input = { path = "../input" }
ecs = { path = "../ecs" }

nalgebra-glm = { workspace = true }
winit = "0.30.9"