[package]
name = "asset_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
project = { path = "../project" }
assets = { path = "../assets" }
material = { path = "../material" }
rendering_backend = { path = "../rendering_backend" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
nalgebra = { workspace = true }
nalgebra-glm = { workspace = true }
tobj = "4.0.2"
gltf = { version = "1", features = ["import"] }