[package]
name = "scene"
version = "0.1.0"
edition = "2021"

[dependencies]
assets = { path = "../assets" }
rendering_backend = { path = "../rendering_backend" }
material = { path = "../material" }
core = { path = "../core" }
nalgebra-glm = { workspace = true }
game_object = { path = "../game_object" }
