[package]
name = "vulkan_backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
winit = "0.30.3"
serde = { version = "1.0.217", features = ["derive"] }
nalgebra = { workspace = true }
nalgebra-glm = { workspace = true }
bincode = { workspace = true }
image = { workspace = true }
num = { workspace = true }

